--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "fs-extra": "^9.1.0",
-    "po2json": "^0.4.5",
+    "gettext-parser": "^6.0.0",
     "walk": "^2.3.14"
   },
   "scripts": {
-    "test": "",
     "start": "babel -w src -d dist",
     "build": "babel src -d dist",
     "preversion": "npm test",
