--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "walk": "^2.3.14"
   },
   "scripts": {
+    "test": "",
     "start": "babel -w src -d dist",
     "build": "babel src -d dist",
     "preversion": "npm test",
